# py-htmlbuilder

./: LICENSE  Makefile  README.md  bootstrap_exercise.py  pyproject.toml  text.py  text_2.py
py_html/: __init__.py
py_html/contrib/bootstrap/: _types.py  alert.py  avatar.py  badge.py  breadcrumb.py  button.py  card.py  icon.py  layout_grid_system.py  main.py  util.py
py_html/el/: __init__.py  base.py
py_html/el/elements/: audio.py  basic.py  formatting.py  forms.py  frames.py  images.py  links.py  lists.py  meta_info.py  programming.py  semantics.py  tables.py
py_html/styles/: __init__.py  base.py  spec.py  utils.py
samples/: readme.py
samples/bootstrap/: server.py
samples/bootstrap/examples/: avatar.py  breadcrumb.py  buttons.py  card.py  icons.py  layout.py
